# zombie

./: .gitignore  README.md  pyproject.toml
01_SOURCES/zombie_source_extract/: TYPE___SOUL_-_Almighty_All_Zombe_Hints.txt  The_Almighty_Quests.txt  _Zombie_Checklist_Database.txt  extraction_summary.json
02_WORKING_NOTES/: ZOMBIE_QUEST_ENGLISH_CHECKLIST.md  ZOMBIE_QUEST_FINAL_SOLUTION.md  ZOMBIE_QUEST_NEW_HINT_REASSESSMENT.md  ZOMBIE_QUEST_SIDECHARACTER_UPDATE.md
02_WORKING_NOTES/image_latest_hint_analysis/: hint_image2_green_only_analysis.json
03_TOOLS/: build_hint_reassessment_pdf.py  build_minimal_zombie_guide.py  build_zombie_almighty.py  build_zombie_sot.py  zombie_analysis.py  zombie_csp_model.py  zombie_dispatcher.py  zombie_tail_simulator.py  zombie_test_generator.py  zombie_test_runner.py
03_TOOLS/zombie_test_runner/: all_test_cases.json  analysis_report_20260522_000158.md  analysis_report_20260522_002307.md  analysis_report_20260522_002930.md  analysis_report_20260522_003102.md  analysis_report_20260522_004027.md  analysis_report_20260522_004608.md  coverage_log.json
04_AUTORESEARCH/: .gitignore  README.md  prepare.py  program.md  pyproject.toml  train.py
05_RESEARCH_BRAIN/: claim_ledger.json  contradiction_log.md  decision_log.md  hypothesis_board.json  mechanics_ontology.json  open_questions.md  program.md  research_report.md  research_rules.md  source_registry.json
05_RESEARCH_BRAIN/evidence_packs/: EPACK-2ISH-001.json  EPACK-2ISH-001.md
05_RESEARCH_BRAIN/indexes/: trello_manifest.json
05_RESEARCH_BRAIN/prompts/: build_constraints.md  (+5 more)
(+42 files in other folders)
